# eduray

./: .gitignore  README.md  hello_world.ipynb  pyproject.toml  requirements.txt
educational_notebooks/: 1_data_visualizer.ipynb  2_camera_render_loop.ipynb  3_intersections_geometry.ipynb  4_material_shaders_lights.ipynb  5_integrator_recursion.ipynb  6_noise_procedural.ipynb  7_demo_scene.ipynb  introduction.md
educational_notebooks/other/: animation.ipynb  post_proces.ipynb
eduray/: __init__.py  internals.py
eduray/geometry/: __init__.py  geometry_hit.py  primitive.py  ray.py
eduray/geometry/primitives/: __init__.py  box.py  cylinder.py  plane.py  sphere.py  square.py  torus.py  triangle.py
eduray/io/: __init__.py  object_libraries.py  pickle_manager.py  resolution.py  video.py
eduray/material/: __init__.py  color.py
eduray/material/material/: __init__.py  material.py  material_sample.py  phong_material.py
eduray/material/textures/: __init__.py
eduray/math/: __init__.py  helpers.py  optics.py  vec3.py  vector.py  vertex.py
eduray/render/: __init__.py  render_config.py
eduray/render/integrator/: __init__.py  fresnel.py  integrator.py  (+2 more)
eduray/scene/: __init__.py  light.py  object.py  scene.py  skybox.py  surface_interaction.py  transform.py
eduray/shading/: __init__.py  blinn_phong_shader.py  color_shader.py  depth_shader.py  diff_shader.py  dot_product_shader.py  helpers.py  lambert_shader.py  local_shading.py  normal_shader.py
eduray/visualizer/: __init__.py  edu_helpers.py  visualizer.py
src/io/: image_helper.py  object_libraries.py  pickle_manager.py
src/material/: color.py
src/math/: optics.py  vec3.py
src/scene/: skybox.py
src/visualizer/: visualizer.py
(+33 files in other folders)
