[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eduray"
version = "0.2.2"
description = "Educational Python ray tracer with a modular architecture, visualization tools, example scenes, and support for shadows, reflections, refractions, and Blinn-Phong shading."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"

authors = [
    { name = "Jan Šik"}
]

keywords = [
    "raytracing",
    "rendering",
    "computer-graphics",
    "phong",
    "blinn-phong",
    "shadows",
    "reflections",
    "refractions",
    "education",
    "python",
    "visualization",
    "numpy",
    "pillow",
    "jupyter",
    "matplotlib",
    "eduray"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Topic :: Multimedia :: Graphics :: 3D Rendering",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]


dependencies = [
    "numpy~=2.2.6",
    "Pillow~=11.3.0",
    "tqdm>=4.67.0",
    "ipython~=9.5.0",
    "ipywidgets>=8.1.0",
    "imageio>=2.30.0",
    "matplotlib~=3.10.6",
    "ipykernel>=6.29",
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0",
    "ipywidgets>=8.0",
    "matplotlib>=3.8",
]

all = ["eduray[notebook]"]

[project.urls]
Repository = "https://github.com/HonzaSik/eduray"

[tool.setuptools.packages.find]
where = ["."]
include = ["eduray", "eduray.*"]
exclude = ["tests*", "notebooks*", "renders*", "examples*", "educational_notebooks*"]
